changed computer to run in a separate JVM, restricted file access